--- a/style.css
+++ b/style.css
@@ -1,361 +1,448 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');
-:root {
-    --primary-color: #2cc76a;
-    --secondary-color: #f45c57;
-    --tertiary-color: #202b34;
-    --fourthiary-color: #34454e;
-}
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-html {
-    font-family: 'Roboto', sans-serif;
-}
-
-li {
-    list-style: none;
-}
-
-a {
-    text-decoration: none;
-    color: white;
-    transition: 1s;
-}
-
-
-/* HEADER */
-
-header {
-    position: fixed;
-    background-color: #202b34d3;
-    /* background-color: var(--fourthiary-color); */
-    width: 100vw;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1rem 1.5rem;
-    z-index: 3
-}
-
-header .logo img {
-    width: 3.5rem;
-    height: 3.5rem;
-}
-
-header .links {
-    display: flex;
-    align-items: center;
-    /* padding: 0 2rem */
-    height: 3.5rem;
-    padding: 0 2rem;
-}
-
-header .links ul {
-    display: flex;
-    justify-content: space-around;
-    width: 100%;
-    height: 100%;
-    align-items: center;
-}
-
-header .links ul li {
-    margin: 0 .9rem;
-    color: white;
-}
-
-header .links ul li a {
-    font-weight: 700;
-    padding: 3px 6px;
-    background: linear-gradient(to top right, #FFF, #FFF, #b91616, #b91616) bottom/0% 4px no-repeat;
-    font-size: 1.4rem;
-}
-
-header .links ul li a:hover {
-    background-size: 100% 3px;
-    color: #ccc;
-}
-
-header .links .btn-login {
-    background-color: var(--primary-color);
-    padding: .9rem 1.5rem;
-    border-radius: .4rem;
-}
-
-header .links .btn-login:hover {
-    background-color: #75ca97;
-}
-
-
-/* BANNER */
-
-.banner {
-    height: 100vh;
-    background: url('./img/bgbj.jpeg') center no-repeat;
-    background-size: cover;
-}
-
-.bg-banner {
-    background-color: #202b3460;
-    height: 100%;
-}
-
-.banner .text-banner {
-    color: white;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.banner .text-banner h1 {
-    font-size: 4em;
-}
-
-.banner .text-banner p {
-    font-size: 1.7em;
-    font-weight: 800;
-}
-
-
-/*Especialidades  */
-
-.speciealties-container {
-    padding: 5em 0;
-}
-
-.speciealties-container ul {
-    display: flex;
-    width: 90%;
-    flex-wrap: wrap;
-    position: relative;
-    margin: 0 auto;
-}
-
-.speciealties-container ul li {
-    flex: 1 1 30%;
-    text-align: center;
-    padding: 2rem;
-}
-
-.fas {
-    font-size: 3.6rem;
-    margin-bottom: 1.2rem;
-}
-
-.fa-shield-alt {
-    color: #2CC76A;
-}
-
-.fa-rocket {
-    color: #EF3F29;
-}
-
-.fa-comments {
-    color: #EF8F29;
-}
-
-.speciealties-container ul li h3 {
-    margin-bottom: 1.5rem;
-    color: #333;
-}
-
-.speciealties-container ul li p {
-    line-height: 1.4rem;
-    color: #70747A;
-}
-
-
-/* prices */
-
-.pricing-container {
-    padding-bottom: 5rem;
-    text-align: center;
-}
-
-.pricing-container h1 {
-    font-size: 1.6em;
-}
-
-.pricing-container p {
-    font-size: 1.2em;
-}
-
-.plans-container {
-    display: flex;
-    justify-content: space-between;
-    width: 90%;
-    margin: 2.5rem auto 0;
-    flex-wrap: wrap;
-}
-
-.plan {
-    flex: 1 0 20%;
-    margin: 0 2rem;
-    margin-bottom: .5rem;
-}
-
-.plan li {
-    height: 4rem;
-    line-height: 2rem;
-    background-color: #E8E9EA;
-    color: #333;
-}
-
-.plan .price {
-    width: 8.5rem;
-    height: 8.5rem;
-    border-radius: 50%;
-    background-color: var(--primary-color);
-    color: white;
-    text-align: center;
-    position: relative;
-    margin: 0 auto;
-    margin-bottom: -2rem;
-    font-weight: 500;
-    font-size: 1.3em;
-    line-height: 8rem;
-}
-
-.plan .Plan-name {
-    background-color: var(--fourthiary-color);
-    padding: 4rem 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    font-size: 1.5em;
-    font-weight: 700;
-    text-transform: uppercase;
-}
-
-.plan .btn-select {
-    background-color: var(--primary-color);
-    display: block;
-    width: 100%;
-    height: 100%;
-    transition: .5s all;
-    display: flex;
-    align-items: center;
-    justify-content: center
-}
-
-.plan .btn-select:hover {
-    background-color: #2baa5e;
-}
-
-.plan .recommend {
-    background-color: var(--secondary-color);
-    transition: .3s all;
-}
-
-.plan .btn-recommend:hover {
-    background-color: #EF3F29;
-}
-
-
-/* search-domain */
-
-.search-domain {
-    background-color: var(--tertiary-color);
-    text-align: center;
-    padding: 5rem 0;
-}
-
-.search-domain h2 {
-    color: white;
-    font-size: 3em;
-    margin-bottom: 1.3rem;
-}
-
-.search-domain p {
-    color: #D5D5D5;
-    font-size: 2em;
-    margin-bottom: 1.7rem;
-}
-
-.search-domain input {
-    display: block;
-    position: relative;
-    margin: 0 auto;
-    border: none;
-    border-radius: .6rem;
-}
-
-.search-domain input[type=text] {
-    margin-bottom: 1.7rem;
-    width: 60%;
-    padding: 2rem;
-    font-size: 1.3em;
-}
-
-.search-domain input[type=submit] {
-    background-color: var(--primary-color);
-    color: white;
-    padding: 1.6rem 3.4rem;
-    cursor: pointer;
-}
-
-
-/* concact-container */
-
-.concact-container {
-    text-align: center;
-    padding: 5rem 0 2rem;
-}
-
-.concact-container h2 {
-    font-size: 1.9rem;
-}
-
-.concact-container p {
-    font-size: 1.6rem;
-    margin-bottom: 3.2rem;
-}
-
-.concact-container input,
-.concact-container textarea {
-    width: 12.5rem;
-    padding: 1rem 1.5rem;
-    font-size: .9rem;
-    border-radius: .5rem;
-    border: .2rem solid #CCC;
-    margin: 0 .5rem 1rem;
-}
-
-.concact-container textarea {
-    display: block;
-    position: relative;
-    margin: 0 auto .4rem;
-    width: 26rem;
-    height: 6.5rem;
-    resize: vertical;
-}
-
-.concact-container input[type='submit'] {
-    background-color: var(--primary-color);
-    cursor: pointer;
-    display: block;
-    position: relative;
-    margin: 0 auto;
-    color: white;
-}
-
-
-/* footer */
-
-footer {
-    text-align: center;
-    font-weight: bold;
-    /* margin-bottom: 2rem; */
-    background-color: var(--tertiary-color);
-    padding: 2rem 0;
-    color: white;
-}
+    @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');
+     :root {
+        --primary-color: #2cc76a;
+        --secondary-color: #f45c57;
+        --tertiary-color: #202b34;
+        --fourthiary-color: #34454e;
+    }
+    
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
+    
+    html {
+        font-family: 'Roboto', sans-serif;
+    }
+    
+    li {
+        list-style: none;
+    }
+    
+    a {
+        text-decoration: none;
+        color: white;
+        transition: 1s;
+    }
+    /* HEADER */
+    
+    header {
+        position: fixed;
+        background-color: #202b34d3;
+        /* background-color: var(--fourthiary-color); */
+        width: 100vw;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 1rem 1.5rem;
+        z-index: 3;
+    }
+    
+    header .logo img {
+        width: 3.5rem;
+        height: 3.5rem;
+    }
+    
+    header .links {
+        display: flex;
+        align-items: center;
+        /* padding: 0 2rem */
+        height: 3.5rem;
+        padding: 0 2rem;
+    }
+    
+    header .links ul {
+        display: flex;
+        justify-content: space-around;
+        width: 100%;
+        height: 100%;
+        align-items: center;
+    }
+    
+    header .links ul li {
+        margin: 0 .9rem;
+        color: white;
+        transition: 1s all;
+    }
+    
+    header .links ul li a {
+        font-weight: 700;
+        padding: 3px 6px;
+        background: linear-gradient(to top right, #FFF, #FFF, #b91616, #b91616) bottom/0% 4px no-repeat;
+        font-size: 1.4rem;
+    }
+    
+    header .links ul li a:hover {
+        background-size: 100% 3px;
+        color: #ccc;
+    }
+    
+    header .links .btn-login,
+    .mobile .btn-login {
+        background-color: var(--primary-color);
+        padding: .9rem 1.5rem;
+        border-radius: .4rem;
+    }
+    
+    header .links .btn-login:hover,
+    .mobile .btn-login:hover {
+        background-color: #75ca97;
+    }
+    /* BANNER */
+    
+    .banner {
+        height: 100vh;
+        background: url('./img/bgbj.jpeg') center no-repeat;
+        background-size: cover;
+    }
+    
+    .bg-banner {
+        background-color: #202b3460;
+        height: 100%;
+    }
+    
+    .banner .text-banner {
+        color: white;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .banner .text-banner h1 {
+        font-size: 4em;
+    }
+    
+    .banner .text-banner p {
+        font-size: 1.7em;
+        font-weight: 800;
+    }
+    /*Especialidades  */
+    
+    .speciealties-container {
+        padding: 5em 0;
+    }
+    
+    .speciealties-container ul {
+        display: flex;
+        width: 90%;
+        flex-wrap: wrap;
+        position: relative;
+        margin: 0 auto;
+    }
+    
+    .speciealties-container ul li {
+        flex: 1 1 30%;
+        text-align: center;
+        padding: 2rem;
+    }
+    
+    .fas {
+        font-size: 3.6rem;
+        margin-bottom: 1.2rem;
+    }
+    
+    .fa-shield-alt {
+        color: #2CC76A;
+    }
+    
+    .fa-rocket {
+        color: #EF3F29;
+    }
+    
+    .fa-comments {
+        color: #EF8F29;
+    }
+    
+    .speciealties-container ul li h3 {
+        margin-bottom: 1.5rem;
+        color: #333;
+    }
+    
+    .speciealties-container ul li p {
+        line-height: 1.4rem;
+        color: #70747A;
+    }
+    /* prices */
+    
+    .pricing-container {
+        padding-bottom: 5rem;
+        text-align: center;
+    }
+    
+    .pricing-container h1 {
+        font-size: 1.6em;
+    }
+    
+    .pricing-container p {
+        font-size: 1.2em;
+    }
+    
+    .plans-container {
+        display: flex;
+        justify-content: space-between;
+        width: 90%;
+        margin: 2.5rem auto 0;
+        flex-wrap: wrap;
+    }
+    
+    .plan {
+        flex: 1 1 22.5%;
+        margin: 0 2rem;
+        margin-bottom: .5rem;
+    }
+    
+    .plan li {
+        height: 4rem;
+        line-height: 2rem;
+        background-color: #E8E9EA;
+        color: #333;
+    }
+    
+    .plan .price {
+        width: 8.5rem;
+        height: 8.5rem;
+        border-radius: 50%;
+        background-color: var(--primary-color);
+        color: white;
+        text-align: center;
+        position: relative;
+        margin: 0 auto;
+        margin-bottom: -2rem;
+        font-weight: 500;
+        font-size: 1.3em;
+        line-height: 8rem;
+    }
+    
+    .plan .Plan-name {
+        background-color: var(--fourthiary-color);
+        padding: 4rem 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: white;
+        font-size: 1.5em;
+        font-weight: 700;
+        text-transform: uppercase;
+    }
+    
+    .plan .btn-select {
+        background-color: var(--primary-color);
+        display: block;
+        width: 100%;
+        height: 100%;
+        transition: .5s all;
+        display: flex;
+        align-items: center;
+        justify-content: center
+    }
+    
+    .plan .btn-select:hover {
+        background-color: #2baa5e;
+    }
+    
+    .plan .recommend {
+        background-color: var(--secondary-color);
+        transition: .3s all;
+    }
+    
+    .plan .btn-recommend:hover {
+        background-color: #EF3F29;
+    }
+    /* search-domain */
+    
+    .search-domain {
+        background-color: var(--tertiary-color);
+        text-align: center;
+        padding: 5rem 0;
+    }
+    
+    .search-domain h2 {
+        color: white;
+        font-size: 3em;
+        margin-bottom: 1.3rem;
+    }
+    
+    .search-domain p {
+        color: #D5D5D5;
+        font-size: 2em;
+        margin-bottom: 1.7rem;
+    }
+    
+    .search-domain input {
+        display: block;
+        position: relative;
+        margin: 0 auto;
+        border: none;
+        border-radius: .6rem;
+    }
+    
+    .search-domain input[type=text] {
+        margin-bottom: 1.7rem;
+        /* width: 60%; */
+        padding: 2rem;
+        font-size: 1.3em;
+    }
+    
+    .search-domain input[type=submit] {
+        background-color: var(--primary-color);
+        color: white;
+        padding: 1.6rem 3.4rem;
+        cursor: pointer;
+    }
+    /* concact-container */
+    
+    .concact-container {
+        text-align: center;
+        padding: 5rem 0 2rem;
+    }
+    
+    .concact-container h2 {
+        font-size: 1.9rem;
+    }
+    
+    .concact-container p {
+        font-size: 1.6rem;
+        margin-bottom: 3.2rem;
+    }
+    
+    .concact-container input,
+    .concact-container textarea {
+        width: 12.5rem;
+        padding: 1rem 1.5rem;
+        font-size: .9rem;
+        border-radius: .5rem;
+        border: .2rem solid #CCC;
+        margin: 0 .5rem 1rem;
+    }
+    
+    .concact-container textarea {
+        display: block;
+        position: relative;
+        margin: 0 auto .4rem;
+        width: 26rem;
+        height: 6.5rem;
+        resize: vertical;
+    }
+    
+    .concact-container input[type='submit'] {
+        background-color: var(--primary-color);
+        cursor: pointer;
+        display: block;
+        position: relative;
+        margin: 0 auto;
+        color: white;
+        border: none;
+    }
+    /* footer */
+    
+    footer {
+        text-align: center;
+        font-weight: bold;
+        /* margin-bottom: 2rem; */
+        background-color: var(--tertiary-color);
+        padding: 2rem 0;
+        color: white;
+    }
+    /* mobile */
+    
+    @media (max-width:586px) {
+        html,
+        body {
+            overflow-x: hidden;
+        }
+        header .links ul li a {
+            font-weight: 500;
+            font-size: .9rem;
+        }
+        header .links .btn-login {
+            padding: .5rem 1rem;
+        }
+        .search-domain,
+        .concact-container {
+            padding: 3em 2em;
+        }
+        .search-domain input {
+            width: 100%;
+        }
+    }
+    
+    header .mobile {
+        display: none;
+        align-items: center;
+        height: 16.5rem;
+        width: 10rem;
+        padding: 0 .5rem;
+        background-color: #070707b6;
+    }
+    
+    header .mobile ul {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        width: 100%;
+        height: 100%;
+        align-items: center;
+    }
+    
+    header .mobile ul li {
+        color: white;
+        border: 1px solid white;
+        width: 100%;
+        text-align: center;
+        background: linear-gradient( to right, #acb5e6, #EEE) bottom/0% 4px no-repeat;
+        transition: 1s all;
+    }
+    
+    header .mobile ul li:hover {
+        background-size: 100% 4rem;
+    }
+    
+    @media (max-width:501px) {
+        .concact-container {
+            position: relative;
+        }
+        .concact-container input,
+        .concact-container textarea {
+            width: 100%;
+            display: block;
+            margin: .4rem auto;
+        }
+        header .links {
+            display: none;
+        }
+        header {
+            display: grid;
+            grid-template-columns: 2.5rem 1fr 2.5rem;
+            grid-auto-rows: auto;
+            justify-items: center;
+        }
+        header .activemenu {
+            display: flex;
+        }
+        .logo {
+            grid-column: 1
+        }
+        .mobile {
+            grid-row: 3/4;
+            grid-column: 1/5;
+        }
+        .menu-hamburguer {
+            cursor: pointer;
+            left: 24rem;
+            top: -3rem;
+            grid-column: 4;
+        }
+        .menu-hamburguer .line {
+            height: .4rem;
+            width: 3rem;
+            margin-bottom: .2rem;
+            background-color: #FFF;
+            border-radius: .4rem;
+        }
+    }
