--- a/style.css
+++ b/style.css
@@ -376,7 +376,7 @@
         display: none;
         align-items: center;
         height: 16.5rem;
-        width: 10rem;
+        width: 20rem;
         padding: 0 .5rem;
         background-color: #070707b6;
     }
@@ -444,5 +444,15 @@
             margin-bottom: .2rem;
             background-color: #FFF;
             border-radius: .4rem;
+            transition: .7s all
+        }
+        .change .line1 {
+            transform: scale(0.75) rotate( 300deg);
+        }
+        .change .line3 {
+            transform: translateY(-1.2rem) scale(0.75) rotate(-300deg);
+        }
+        .change .line2 {
+            opacity: 0;
         }
     }
